tests/projects/01/00.br
// projects/01/00.br

// empty structure test 

import "01.br";

struct Foo {} // fine 

union Bar {} // error 

variant Bin {} // error 

contract Thingie {} // redef error

struct Counter has(Thingie) {
    i32 a;
    mt onetwothree() -> i32 {
        return a + 1 + 2 + 3;
    }
}
